# video-workflow

./: .gitignore  config.example.json  pyproject.toml
docs/: mo-jian-segments.json  mo-jian-story.md
video_workflow/: __init__.py  __main__.py  check_env.py  config.py  dns_workaround.py  image_generator.py  materials.py  models.py  pipeline.py  script_writer.py  storage.py  storyboard.py  video_creator.py  video_stitcher.py
video_workflow/cli/: __init__.py  main.py
video_workflow/core/: context.py
video_workflow/core_type/: __init__.py
video_workflow/models/: __init__.py  project.py  storage.py
video_workflow/plugins/: __init__.py  base.py  character_consistency.py  state_autosave.py
video_workflow/providers/: __init__.py  agnes_image.py  agnes_text.py  agnes_video.py  base.py  deepseek_text.py  seedance_video.py
video_workflow/steps/: __init__.py  base.py  batch_step.py  image_step.py  refine_step.py  script_step.py  stitch_step.py  video_step.py
video_workflow/ucore/: __init__.py  context.py  pipeline.py  registry.py
video_workflow/ucore_type/: project.py
video_workflow/utils/: __init__.py  config.py  dns.py  http.py  stitcher.py
